workloads/poly-rust/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: poly-rust
  labels:
    app.kubernetes.io/part-of: polyhybrid
